Use remote pushes for push branch menu

https://bugzilla.gnome.org/show_bug.cgi?id=606792